syntax = "proto3";

package users;

option go_package = "shared/proto/user;user";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    // rpc GetUser(GetUserByIdRequest) returns (GetUserByIdResponse);
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    Contact contact = 3;
    Education education = 4;
    string jobTitle = 5;
    repeated string interests = 6;

}

message CreateUserResponse {
    bool success = 1;
    string jwtToken = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string jwtToken = 2;
}

message Contact {
    string email = 1;
    string phone = 2;
}

message Education {
    string university = 1;
    string major = 2;
}